# hookz

./: .ai-docs  .coverage  .gcloudignore  .gitignore  .gitmodules  README.md  hookz.toml  pyproject.toml
.claude/skills/impl-handler/: SKILL.md
.github/workflows/: build-xahaud-image.yml  test.yml  xahaud-integration.yml
docker/: Dockerfile  Dockerfile.conan-deps  Dockerfile.dev  cloudbuild.yaml  entrypoint.sh
docs/: external-env-tests.md
examples/env-tests/: README.md  TipBot_test.cpp
examples/tipbot/: hookz.toml  pyproject.toml
examples/tipbot/env-tests/: README.md  TipBotClaude_test.cpp  TipBotClaude_test_hooks.h  TipBot_test_hooks.h
examples/tipbot/hooks/: tip.c  top.c
examples/tipbot/tests/: conftest.py  helpers.py  test_tip.py  test_top.py
scripts/: vendor-xahaud.py
src/hookz/: __init__.py  _version.py  account.py  build_test_hooks.py  compiler.py  config.py  editor.py  hookapi.py  ledger.py  runtime.py  xahaud_files.py  xfl.py
src/hookz/cli/: main.py
src/hookz/coverage/: annotate.py  markers.py  rewriter.py  tracker.py
src/hookz/guard/: __init__.py  checker.py
src/hookz/handlers/: __init__.py  core.py  emit.py  float.py  otxn.py  slot.py  state.py  sto.py  string.py  util.py
src/hookz/wasm/: README.md  (+10 more)
tests/: conftest.py  location_consts.py  test_annotate.py  test_config.py  test_coverage.py  test_editor.py  test_markers.py  test_poc.py  test_wasm.py  test_xahaud.py
tests/e2e/: conftest.py  hookz.toml  test_balance_gate.py  test_govern.py  test_hooks101.py  test_mint.py  test_reward.py  test_treasury.py
tests/fixtures/: marked_hook.c
tests/test_handlers/: test_emit.py  test_float.py  test_otxn.py  test_slot.py  test_state.py  test_sto.py  test_string.py  test_util.py
xahaud-lite/hook/: hookapi.h
(+30 files in other folders)
