[project]
name = "hookz"
version = "0.1.0"
description = "WASM hook testing framework — execute, instrument, and assert on Xahau hooks from Python"
requires-python = ">=3.12"
dependencies = [
    "wasmtime>=29",
    "tree-sitter>=0.24",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "rich>=13",
    "xrpl-py>=4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
hookz = "hookz.cli.main:main"

[project.entry-points."pytest11"]
hookz = "hookz.testing.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hookz"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pillow>=12.1.1",
    "pytest-cov>=7.1.0",
]
